--- a/_publications/2017-03-20-subgenum.md
+++ b/_publications/2017-03-20-subgenum.md
@@ -7,4 +7,4 @@ venue: 'PVLDB 10(3)'
 paperurl: 'http://longbinlai.github.io/files/subgenum.pdf'
 ---
 
-This paper explored an optimal bushy join algorithm for subgraph enumeration in the distributed context. 
+This paper explored an optimal bushy join algorithm for subgraph enumeration in the distributed context. Please fork and play with the source code [GitHub pages](https://github.com/longbin-lai/SubgEnumFramework).
