--- a/_publications/2015-07-20-subgraph.md
+++ b/_publications/2015-07-20-subgraph.md
@@ -7,4 +7,4 @@ venue: 'PVLDB 8(10)'
 paperurl: 'http://longbinlai.github.io/files/subgraph.pdf'
 ---
 
-This paper studied the subgraph enumeration problem using MapReduce. In this paper, a special structure called TwinTwig has been used in the left-deep join structure and proven to be instance-optimal compared to the traditional join based on star. The source code can be forked from here [GitHub pages](https://github.com/longbin-lai/SubgEnumFramework).
+This paper studied the subgraph enumeration problem using MapReduce. In this paper, a special structure called TwinTwig has been used in the left-deep join structure and proven to be instance-optimal compared to the traditional join based on star. The source code can be forked from my [GitHub pages](https://github.com/longbin-lai/SubgEnumFramework). 
