changing to appear

--- a/_publications/2019-06-20-patmat.md
+++ b/_publications/2019-06-20-patmat.md
@@ -3,7 +3,7 @@ title: "Distributed Subgraph Matching on Timely Dataflow [Experiments and Analys
 collection: publications
 permalink: /publication/2019-06-20-patmat
 date: 2019-06-10
-venue: 'to appear in VLDB 2019'
+venue: 'VLDB 2019 (to appear)'
 paperurl: 'http://longbinlai.github.io/files/patmat-exp.pdf'
 ---
 
